# iscc-evm

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
iscc_evm/: __init__.py  build.py  connection.py  declare.py  deploy.py  iscc_hub.abi  iscc_hub.vy  iscc_registrar.abi  iscc_registrar.cr  iscc_registrar.vy  iscc_registrar_polygon.cr  observe.py  settings.py
iscc_evm/solidity/: IsccRegistrar.abi  IsccRegistrar.sol
tests/: test_iscc_evm.py
