[tool.poetry]
name = "iscc-evm"
version = "0.1.0"
description = "EVM Smart Contracts for ISCC declarations"
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iscc/iscc-evm"
keywords=["iscc", "identifier", "decentralized", "registry", "blockchain", "similarity"]

[tool.poetry.dependencies]
python = ">3.7.1,<3.10"
vyper = "^0.3.3"
web3 = "<=5.27.0"
loguru = "^0.6.0"
pydantic = {extras = ["dotenv"], version = "*"}
platformdirs = "<=2.4.1"
iscc-core = "^0.2.4"
jcs = "^0.2.0"

[tool.poetry.dev-dependencies]
pytest = "*"
black = "^22.1.0"
poethepoet = "^0.13.1"

[tool.poe.tasks]
format = { cmd = "poetry run black .", help = "Code style formating with black" }
build = { cmd = "poetry run python -m iscc_evm.build", help = "Build vyper contracts and abi"}
all = ["format", "build"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
